<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ConnectingActivity">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <EditText
             android:textColor="@color/textColor"
             style="@style/EditText_style"
             android:textSize="17sp"
             android:textAlignment="center"
             android:id="@+id/et_client_id"
             android:hint="@string/client_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/textColor"
            style="@style/EditText_style"
            android:textSize="17sp"
            android:textAlignment="center"
            android:hint="@string/server"
            android:id="@+id/et_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/textColor"
            style="@style/EditText_style"
            android:textSize="17sp"
            android:textAlignment="center"
            android:hint="@string/port"
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/textColor"
            android:layout_weight="1"
            android:text="@string/clean_session"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/checkbox_clean_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        style="@style/Button_style"
        android:onClick="Connect"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>